--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "?.git"
+    "url": "https://github.com/imieites/workflows.git"
   },
   "author": "Ignacio Mieites",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-coffee": "^2.2.0",
     "gulp-util": "^3.0.2"
   }
 }
