--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "gulp-concat": "^2.4.3",
     "gulp-connect": "^2.2.0",
     "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.1.0",
     "gulp-jsonminify": "0.0.2",
     "gulp-minify-html": "^0.1.8",
     "gulp-uglify": "^1.0.2",
     "gulp-util": "^3.0.2",
+    "imagemin-pngcrush": "^4.0.0",
     "jquery": "^2.1.3",
-    "mustache": "^1.0.0"
+    "mustache": "^1.0.0",
+    "pngcrush": "^0.1.0"
   }
 }
